--- a/style.css
+++ b/style.css
@@ -68,6 +68,8 @@ body {
     padding-top: 50px;
     display: flex;
     flex-direction: column;
+    /* hidden by default */
+    visibility: hidden;
    
 }
 
