--- a/style.css
+++ b/style.css
@@ -75,8 +75,19 @@ body {
 .items {
     display :flex;
     justify-content: space-between;
-  
+}
 
+.text {
+    
+    display: flex;
+    flex-direction: column;
+   
+}
+
+.btn {
+  
+    display: flex;
+    flex-direction: column;
 }
 
 .items  p {
@@ -126,4 +137,30 @@ body {
     background-color:#059669;
 
     
+}
+
+
+.delete-btn {
+    width: 50px;
+    background-color: #10B981;
+    border-radius: 10px;
+    border: none;
+    height: 25px;
+}
+
+.delete-btn:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+    border: none;
+    background-color:#059669;
+
+    
+}
+
+.items button {
+    margin: 5px;
+}
+
+.items div {
+    margin: 8px;
 }
